Remaining cluster updates onto 1.4
Change-Id: I7bed41c78c2f19e80b61db4f738ca8410dd7d17f
Signed-off-by: Emir Heidinger <emir.heidinger@securekey.com>

--- a/sampleconfig/orderer.yaml
+++ b/sampleconfig/orderer.yaml
@@ -162,6 +162,9 @@ FileLedger:
     # Otherwise, this value is ignored.
     Prefix: hyperledger-fabric-ordererledger
 
+    # BlockCacheSize: size limit of block cache
+    BlockCacheSize: 5
+
 ################################################################################
 #
 #   SECTION: RAM Ledger
