--- a/images/ccenv/Dockerfile.in
+++ b/images/ccenv/Dockerfile.in
@@ -5,4 +5,6 @@
 FROM _BASE_NS_/fabric-baseimage:_BASE_TAG_
 COPY payload/chaintool payload/protoc-gen-go /usr/local/bin/
 ADD payload/goshim.tar.bz2 $GOPATH/src/
+RUN ls -l $GOPATH/src/github.com/hyperledger/fabric
+RUN cd $GOPATH/src/github.com/hyperledger/fabric;GOCACHE=on GO111MODULE=on go mod vendor
 RUN mkdir -p /chaincode/input /chaincode/output
