[FAB-14646] Update dependency opencontainers runc
Change-Id: I74144b2a2e5707e179137bba319178dac9c491ce
Signed-off-by: Firas Qutishat <firas.qutishat@securekey.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -173,6 +173,10 @@ noverify = [
   name = "github.com/go-kit/kit"
   version = "0.7.0"
 
+[[override]]
+  name = "github.com/opencontainers/runc"
+  revision = "2b18fe1d885ee5083ef9f0838fee39b62d653e30"
+
 [prune]
   go-tests = true
   unused-packages = true
