[DEV-13084] Fabric Next Build for s390 - Failed to fetch jessie backports repository
Change-Id: Ife78e39ea4618ff3bfe433c37e9303f0c9d28b9b
Signed-off-by: Rolson Quadras <rolson.quadras@securekey.com>

--- a/scripts/images/fabric-peer-softhsm/Dockerfile
+++ b/scripts/images/fabric-peer-softhsm/Dockerfile
@@ -28,7 +28,7 @@ ENV   GOROOT=${goroot} \
 RUN   set -xe; \
       export ARCH_URL=amd64 && \
       if [ "${ARCH}" = "s390x" ]; then export ARCH_URL=s390x; \
-      echo 'deb http://ftp.debian.org/debian jessie-backports main' >> /etc/apt/sources.list; fi && \
+      echo 'deb [check-valid-until=no] http://archive.debian.org/debian jessie-backports main' >> /etc/apt/sources.list; fi && \
       apt-get update && \
       apt-get install -y --no-install-recommends softhsm2 curl git gcc g++ libtool libltdl-dev && \
       rm -rf /var/lib/apt/lists/* && \
