Doing system package update
also removing nodejs and npm

Signed-off-by: Ahmed Sajid <ahmed.sajid@securekey.com>
Change-Id: I9f3498bab1d386ad523819155855b32e0b21a6bf

--- a/scripts/images/fabric-baseos/Dockerfile
+++ b/scripts/images/fabric-baseos/Dockerfile
@@ -3,13 +3,14 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 #
-
 ARG FABRIC_BASE_OS_IMAGE=hyperledger/fabric-baseos
 ARG ARCH=amd64
 ARG FABRIC_BASE_VERSION=0.4.8
-
 FROM ${FABRIC_BASE_OS_IMAGE}:${ARCH}-${FABRIC_BASE_VERSION}
 LABEL maintainer=sk-dev-team
-
 RUN apt-get update
 RUN apt-get install -y libltdl7
+RUN apt-get -y dist-upgrade \
+    && apt-get clean autoclean \
+    && apt-get autoremove -y \
+    && rm -rf /var/lib/cache /var/lib/log
