[WIP] Doing system package update
also removing nodejs and npm

Signed-off-by: Ahmed Sajid <ahmed.sajid@securekey.com>
Change-Id: I9f3498bab1d386ad523819155855b32e0b21a6bf

--- a/scripts/images/fabric-baseimage/Dockerfile
+++ b/scripts/images/fabric-baseimage/Dockerfile
@@ -3,10 +3,21 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 #
-
 ARG FABRIC_BASE_IMAGE=hyperledger/fabric-baseimage
 ARG ARCH=amd64
 ARG FABRIC_BASE_VERSION=0.4.8
-
 FROM ${FABRIC_BASE_IMAGE}:${ARCH}-${FABRIC_BASE_VERSION}
 LABEL maintainer=sk-dev-team
+
+# Remove node npm
+# https://stackoverflow.com/a/11178106
+# Remove java
+# https://askubuntu.com/a/185250
+RUN ["/bin/bash", "-c", "rm -rf /usr/local/{lib/node{,/.npm,_modules},bin,share/man}/{npm*,node*,man1/node*}"]
+RUN ["/bin/bash", "-c", "dpkg-query -W -f='${binary:Package}\n' | grep -E -e '^(ia32-)?(sun|oracle)-java' -e '^openjdk-' -e '^icedtea' -e '^(default|gcj)-j(re|dk)' -e '^gcj-(.*)-j(re|dk)' -e '^java-common' | xargs apt-get -y purge"]
+
+RUN apt-get update -qq \
+    && apt-get -y dist-upgrade \
+    && apt-get clean autoclean \
+    && apt-get autoremove -y \
+    && rm -rf /var/lib/cache /var/lib/log
