Trying speeding up package update process
Signed-off-by: Ahmed Sajid <ahmed.sajid@securekey.com>
Change-Id: I33cd84dc9ee7d81c5b5aa962af8972670094a86e

--- a/scripts/images/fabric-baseimage/Dockerfile
+++ b/scripts/images/fabric-baseimage/Dockerfile
@@ -18,7 +18,8 @@ RUN ["/bin/bash", "-c", "rm -rf /usr/local/{lib/node{,/.npm,_modules},bin,share/
 RUN ["/bin/bash", "-c", "dpkg-query -W -f='${binary:Package}\n' | grep -E -e '^(ia32-)?(sun|oracle)-java' -e '^openjdk-' -e '^icedtea' -e '^(default|gcj)-j(re|dk)' -e '^gcj-(.*)-j(re|dk)' -e '^java-common' | xargs apt-get -y purge"]
 
 RUN apt-get update -qq \
-    && apt-get -y dist-upgrade \
+    && apt-get install -y aria2 \
+    && apt-get -y --print-uris dist-upgrade | egrep -o -e "http://[^\']+" | aria2c -c -d /var/cache/apt/archives -i -; apt-get -y dist-upgrade \
     && apt-get clean autoclean \
     && apt-get autoremove -y \
     && rm -rf /var/lib/cache /var/lib/log
