--- a/scripts/images/fabric-couchdb/Dockerfile
+++ b/scripts/images/fabric-couchdb/Dockerfile
@@ -10,8 +10,12 @@ ARG FABRIC_BASE_VERSION=0.4.8
 FROM ${FABRIC_COUCHDB_IMAGE}:${ARCH}-${FABRIC_BASE_VERSION}
 LABEL maintainer=sk-dev-team
 
+RUN sed -i -e 's/http:\/\/archive/mirror:\/\/mirrors/' -e 's/\/ubuntu\//\/mirrors.txt/' /etc/apt/sources.list
+RUN sed -i -e 's/http:\/\/security/mirror:\/\/mirrors/' -e 's/\/ubuntu\//\/mirrors.txt/' /etc/apt/sources.list
+
 RUN apt-get update -qq \
-    && apt-get -y dist-upgrade \
+    && apt-get install -y aria2 \
+    && apt-get -y --print-uris dist-upgrade | egrep -o -e "http://[^\']+" | aria2c -c -d /var/cache/apt/archives -i -; apt-get -y dist-upgrade \
     && apt-get clean autoclean \
     && apt-get autoremove -y \
     && rm -rf /var/lib/cache /var/lib/log
