Fixing npm failure
Signed-off-by: Ahmed Sajid <ahmed.sajid@securekey.com>
Change-Id: If85b1f4285e58101f2ed0d83d404ea35f2129cea

--- a/scripts/images/fabric-couchdb/Dockerfile
+++ b/scripts/images/fabric-couchdb/Dockerfile
@@ -10,6 +10,7 @@ ARG FABRIC_BASE_VERSION=0.4.8
 FROM ${FABRIC_COUCHDB_IMAGE}:${ARCH}-${FABRIC_BASE_VERSION}
 LABEL maintainer=sk-dev-team
 
+# System package update
 RUN apt-get update -qq \
     && apt-get -y dist-upgrade \
     && apt-get clean autoclean \
