--- a/scripts/images/fabric-baseos/Dockerfile
+++ b/scripts/images/fabric-baseos/Dockerfile
@@ -8,9 +8,11 @@ ARG ARCH=amd64
 ARG FABRIC_BASE_VERSION=0.4.8
 FROM ${FABRIC_BASE_OS_IMAGE}:${ARCH}-${FABRIC_BASE_VERSION}
 LABEL maintainer=sk-dev-team
-RUN apt-get update
-RUN apt-get install -y libltdl7
-RUN apt-get -y dist-upgrade \
+
+# System package Update
+RUN apt-get update \
+    && apt-get install -y libltdl7 \
+    && apt-get -y dist-upgrade \
     && apt-get clean autoclean \
     && apt-get autoremove -y \
     && rm -rf /var/lib/cache /var/lib/log
