--- a/scripts/images/fabric-cross-compile/Dockerfile
+++ b/scripts/images/fabric-cross-compile/Dockerfile
@@ -33,4 +33,4 @@ RUN apt-get update -qq \
     && apt-get -y dist-upgrade \
     && apt-get clean autoclean \
     && apt-get autoremove -y \
-    && rm -rf /var/lib/cache /var/lib/log
+    && rm -rf /var/lib/cache /var/lib/log /var/lib/apt/lists/*
