--- a/scripts/images/fabric-baseos/Dockerfile
+++ b/scripts/images/fabric-baseos/Dockerfile
@@ -3,11 +3,11 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 #
+
 ARG FABRIC_BASE_OS_IMAGE=hyperledger/fabric-baseos
 ARG ARCH=amd64
 ARG FABRIC_BASE_VERSION=0.4.8
-FROM ${FABRIC_BASE_OS_IMAGE}:${ARCH}-${FABRIC_BASE_VERSION}
-LABEL maintainer=sk-dev-team
+FROM ${FABRIC_BASE_OS_IMAGE}:${ARCH}-${FABRIC_BASE_VERSION} as base
 
 # System package Update
 RUN apt-get update \
@@ -16,3 +16,13 @@ RUN apt-get update \
     && apt-get clean autoclean \
     && apt-get autoremove -y \
     && rm -rf /var/lib/cache /var/lib/log /var/lib/apt/lists/*
+
+#
+#  FINAL CONTAINER
+#
+
+FROM    scratch
+
+COPY    --from=base / /
+
+LABEL maintainer=sk-dev-team
