--- a/scripts/images/fabric-kafka/Dockerfile
+++ b/scripts/images/fabric-kafka/Dockerfile
@@ -6,8 +6,7 @@
 ARG FABRIC_KAFKA_IMAGE=hyperledger/fabric-kafka
 ARG ARCH=amd64
 ARG FABRIC_BASE_VERSION=0.4.8
-FROM ${FABRIC_KAFKA_IMAGE}:${ARCH}-${FABRIC_BASE_VERSION}
-LABEL maintainer=sk-dev-team
+FROM ${FABRIC_KAFKA_IMAGE}:${ARCH}-${FABRIC_BASE_VERSION} as base
 
 # System package update
 RUN apt-get update -qq \
@@ -15,3 +14,13 @@ RUN apt-get update -qq \
     && apt-get clean autoclean \
     && apt-get autoremove -y \
     && rm -rf /var/lib/cache /var/lib/log /var/lib/apt/lists/*
+
+#
+#  FINAL CONTAINER
+#
+
+FROM    scratch
+
+COPY    --from=base / /
+
+LABEL maintainer=sk-dev-team
