--- a/scripts/images/fabric-couchdb/Dockerfile
+++ b/scripts/images/fabric-couchdb/Dockerfile
@@ -7,8 +7,7 @@
 ARG FABRIC_COUCHDB_IMAGE=hyperledger/fabric-couchdb
 ARG ARCH=amd64
 ARG FABRIC_BASE_VERSION=0.4.8
-FROM ${FABRIC_COUCHDB_IMAGE}:${ARCH}-${FABRIC_BASE_VERSION}
-LABEL maintainer=sk-dev-team
+FROM ${FABRIC_COUCHDB_IMAGE}:${ARCH}-${FABRIC_BASE_VERSION} as base
 
 # System package update
 RUN apt-get update -qq \
@@ -16,3 +15,13 @@ RUN apt-get update -qq \
     && apt-get clean autoclean \
     && apt-get autoremove -y \
     && rm -rf /var/lib/cache /var/lib/log /var/lib/apt/lists/*
+
+#
+#  FINAL CONTAINER
+#
+
+FROM    scratch
+
+COPY    --from=base / /
+
+LABEL maintainer=sk-dev-team
